package com.qiding.design;

public interface Element {
    void accept(Visitor visitor);
}
